# django-oscar-stripe-sca

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  runtests.py  setup.py
oscar_stripe_sca/: __init__.py  app.py  apps.py  constants.py  exceptions.py  facade.py  forms.py  loading.py  settings.py  tests.py  utils.py  views.py
oscar_stripe_sca/templates/oscar_stripe_sca/: stripe_payment_details.html  stripe_preview.html
sandbox/: .gitignore  README.rst  settings.py  setup.py  urls.py
sandbox/apps/: app.py
sandbox/apps/checkout/: app.py  apps.py  views.py
sandbox/templates/checkout/: payment_details.html  preview.html
