[build-system]
requires = [ "setuptools>=61.2",]
build-backend = "setuptools.build_meta"

[project]
name = "django-oscar-stripe-sca"
version = "0.3"
description = "Stripe Checkout (with Payment Intents) payment module for django-oscar"
keywords = [ "Payment", "Stripe",]
readme = "README.rst"
classifiers = [ 
        "Development Status :: 4 - Beta", 
        "Environment :: Web Environment", 
        "Framework :: Django", 
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License", 
        "Programming Language :: Python :: 3 :: Only"
    ]
dependencies = [ 
        "django>=3.2", 
        "django-oscar>=2", "stripe>=2.27.0"
    ]

[[project.authors]]
name = "Steve Bradshaw"
email = "steve@pcfive.co.uk"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/st8st8/django-oscar-stripe-sca"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [ "sandbox*",]
namespaces = false
